--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: ExtentReport
-        path: test-output/ExtentReport.html
+        path: test-output/index.html
 
     - name: Move ExtentReport to docs
       run: |
